--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -6,21 +6,21 @@ body, html {
     font-family: 'Itim', cursive;
     background-size: cover!important;
   }
-
-  .page1 {
-    margin: 0px auto;
-    position: relative;
-    margin-top: 0px;
-    width: 100%;
-    height: 100%;
+  .row-centered {
+    text-align:center;
+    margin:0 auto;
 }
-  .img-fluid {
-    border: 0px;
-    padding: 0%;
-    margin-top: -1px;
+.col-centered {
+    display:block;
+    float:none;
+}
+.pos {
+    position: relative;
+}
+img{
     width: 100%;
-    height: 100%;
-  }
+    height: auto;
+}
   .wrapper {
     width: 430px;
     margin: 0 auto;
@@ -28,7 +28,8 @@ body, html {
     padding-top: 0px;
     z-index: 5;
     position: absolute;
-    margin-top: -63%;
+    margin-top: -50%;
+    
   }
   
   #quiz {
@@ -50,7 +51,7 @@ body, html {
   
   .questions {
     font-size: 28px;
-    font-weight: 700;
+    font-weight: 500;
     font-style: italic;
     border-top: 1px solid #FFFFFF;
     border-bottom: 1px solid #FFFFFF;
@@ -111,240 +112,273 @@ body, html {
 
   @media (min-width: 320px){
     .wrapper {
-        margin-top: -142%;
     width: 50%;
-    height: 60%;
+    height: 12%;
     margin-left: 23%;
     }
     #quiz > h1 {
         font-size: 7px;
+        padding-top: 5px;
     }
     .questions {
         font-size: 7px;
+        padding: 8px;
      }
      .answers div {
         font-size: 5px;
+        padding: 4px;
+    }
+    .answers{
+        margin-top: -4%;
     }
     h3{
         font-size: 7px;
-        margin-top: 14%;
+        margin-top: 10%;
     }
      }
      @media (min-width: 360px){
         .wrapper {
-            margin-top: -50%;
-        width: 50%;
-        height: 60%;
-        margin-left: 23%;
-        }
-        #quiz > h1 {
-            font-size: 8px;
-        }
-        .questions {
-            font-size: 8px;
-         }
-         .answers div {
-            font-size: 6px;
-        }
-        h3{
-            font-size: 8px;
-            margin-top: 14%;
-        }
-         }
+            width: 50%;
+            height: 13%;
+            margin-left: 23%;
+            }
+            #quiz > h1 {
+                font-size: 12px;
+                padding-top: 5px;
+            }
+            .questions {
+                font-size: 8px;
+                padding: 8px;
+             }
+             .answers div {
+                font-size: 6px;
+                padding: 4px;
+            }
+            .answers{
+                margin-top: -4%;
+            }
+            h3{
+                font-size: 8px;
+                margin-top: 10%;
+            }
+             }
          @media (min-width: 375px){
             .wrapper {
-                margin-top: -145%;
-            width: 50%;
-            height: 60%;
-            margin-left: 23%;
-            }
-            #quiz > h1 {
-                font-size: 9px;
-            }
-            .questions {
-                font-size: 9px;
-             }
-             .answers div {
-                font-size: 7px;
-            }
-            h3{
-                font-size: 9px;
-                margin-top: 14%;
-            }
-             }
-
-         @media (min-width: 410px){
-            .wrapper {
-                margin-top: -165%;
-            width: 50%;
-            height: 60%;
-            margin-left: 23%;
-            }
-            #quiz > h1 {
-                font-size: 9px;
-            }
-            .questions {
-                font-size: 9px;
-             }
-             .answers div {
-                font-size: 7px;
-            }
-            h3{
-                font-size: 9px;
-                margin-top: 14%;
-            }
-             }
+                width: 50%;
+                height: 15%;
+                margin-left: 23%;
+                margin-top: -52%;
+                }
+                #quiz > h1 {
+                    font-size: 13px;
+                    padding-top: 5px;
+                }
+                .questions {
+                    font-size: 9px;
+                    padding: 8px;
+                 }
+                 .answers div {
+                    font-size: 7px;
+                    padding: 4px;
+                }
+                .answers{
+                    margin-top: -4%;
+                }
+                h3{
+                    font-size: 9px;
+                    margin-top: 10%;
+                }
+                 }
 
              @media (min-width: 530px){
                 .wrapper {
-                    margin-top: -50%;
-                width: 50%;
-                height: 60%;
-                margin-left: 23%;
-                }
-                #quiz > h1 {
-                    font-size: 10px;
-                }
-                .questions {
-                    font-size: 10px;
-                 }
-                 .answers div {
-                    font-size: 8px;
-                }
-                h3{
-                    font-size: 10px;
-                    margin-top: 14%;
-                }
-                 }
+                    width: 50%;
+                    height: 20%;
+                    margin-left: 23%;
+                    margin-top: -52%;
+                    }
+                    #quiz > h1 {
+                        font-size: 15px;
+                        padding-top: 5px;
+                    }
+                    .questions {
+                        font-size: 12px;
+                        padding: 8px;
+                     }
+                     .answers div {
+                        font-size: 10px;
+                        padding: 4px;
+                    }
+                    .answers{
+                        margin-top: -4%;
+                    }
+                    h3{
+                        font-size: 12px;
+                        margin-top: 10%;
+                    }
+                     }
 
                  @media (min-width: 640px){
                     .wrapper {
-                        margin-top: -50%;
-                    width: 50%;
-                    height: 60%;
-                    margin-left: 23%;
-                    }
-                    #quiz > h1 {
-                        font-size: 11px;
-                    }
-                    .questions {
-                        font-size: 11px;
-                     }
-                     .answers div {
-                        font-size: 9px;
-                    }
-                    h3{
-                        font-size: 11px;
-                        margin-top: 14%;
-                    }
-                    .correct, .false {
-                        line-height: 20px;
-                     }
-                    }
+                        width: 50%;
+                        height: 21%;
+                        margin-left: 23%;
+                        margin-top: -52%;
+                        }
+                        #quiz > h1 {
+                            font-size: 19px;
+                            padding-top: 5px;
+                        }
+                        .questions {
+                            font-size: 14px;
+                            padding: 8px;
+                         }
+                         .answers div {
+                            font-size: 12px;
+                            padding: 4px;
+                        }
+                        .answers{
+                            margin-top: -4%;
+                        }
+                        h3{
+                            font-size: 14px;
+                            margin-top: 10%;
+                        }
+                        .correct,.false{
+                            font-size: 70%;
+                            line-height: 16px;
+                        }
+                         }
 
                     @media (min-width: 768px){
                         .wrapper {
-                            margin-top: -108%;
-                        width: 50%;
-                        height: 60%;
-                        margin-left: 23%;
-                        }
-                        #quiz > h1 {
-                            font-size: 14.5px;
-                        }
-                        .questions {
-                            font-size: 12.5px;
-                         }
-                         .answers div {
-                            font-size: 10.5px;
-                        }
-                        h3{
-                            font-size: 12.5px;
-                            margin-top: 14%;
-                        }
-                        .correct, .false {
-                            line-height: 20px;
-                         }
-                        }
+                            width: 50%;
+                            height: 26%;
+                            margin-left: 23%;
+                            margin-top: -52%;
+                            }
+                            #quiz > h1 {
+                                font-size: 24px;
+                                padding-top: 5px;
+                            }
+                            .questions {
+                                font-size: 17px;
+                                padding: 8px;
+                             }
+                             .answers div {
+                                font-size: 14px;
+                                padding: 4px;
+                            }
+                            .answers{
+                                margin-top: -4%;
+                            }
+                            h3{
+                                font-size: 17px;
+                                margin-top: 10%;
+                            }
+                            .correct,.false{
+                                font-size: 80%;
+                                line-height: 19px;
+                            }
+                             }
 
                         @media (min-width: 900px){
                             .wrapper {
-                                margin-top: -100%;
-                            width: 50%;
-                            height: 60%;
-                            margin-left: 23%;
-                            }
-                            #quiz > h1 {
-                                font-size: 18.5px;
-                            }
-                            .questions {
-                                font-size: 14.5px;
-                             }
-                             .answers div {
-                                font-size: 12.5px;
-                            }
-                            h3{
-                                font-size: 14.5px;
-                                margin-top: 14%;
-                            }
-                            .correct, .false {
-                                line-height: 38px;
-                             }
-                            }
+                                width: 50%;
+                                height: 31%;
+                                margin-left: 23%;
+                                margin-top: -52%;
+                                }
+                                #quiz > h1 {
+                                    font-size: 27px;
+                                    padding-top: 5px;
+                                }
+                                .questions {
+                                    font-size: 19px;
+                                    padding: 8px;
+                                 }
+                                 .answers div {
+                                    font-size: 16px;
+                                    padding: 4px;
+                                }
+                                .answers{
+                                    margin-top: -4%;
+                                }
+                                h3{
+                                    font-size: 19px;
+                                    margin-top: 10%;
+                                }
+                                .correct,.false{
+                                    font-size: 90%;
+                                    line-height: 28px;
+                                }
+                                 }
 
                             @media (min-width: 1080px){
                                 .wrapper {
-                                    margin-top: -50%;
-                                width: 50%;
-                                height: 60%;
-                                margin-left: 23%;
-                                }
-                                #quiz > h1 {
-                                    font-size: 22.5px;
-                                }
-                                .questions {
-                                    font-size: 17px;
-                                 }
-                                 .answers div {
-                                    font-size: 15px;
-                                }
-                                h3{
-                                    font-size: 17px;
-                                    margin-top: 14%;
-                                }
-                                .correct, .false {
-                                    line-height: 50px;
-                                 }
-                                }
-                                @media (min-width: 1366px){
-                                    .wrapper {
-                                        margin-top: -50%;
                                     width: 50%;
-                                    height: 60%;
+                                    height: 41%;
                                     margin-left: 23%;
+                                    margin-top: -52%;
                                     }
                                     #quiz > h1 {
-                                        font-size: 26.5px;
+                                        font-size: 31px;
+                                        padding-top: 5px;
                                     }
                                     .questions {
-                                        font-size: 20.4px;
+                                        font-size: 21px;
+                                        padding: 8px;
                                      }
                                      .answers div {
-                                        font-size: 18.5px;
+                                        font-size: 18px;
+                                        padding: 6px;
+                                    }
+                                    .answers{
+                                        margin-top: -3%;
                                     }
                                     h3{
-                                        font-size: 20.5px;
-                                        margin-top: 14%;
+                                        font-size: 21px;
+                                        margin-top: 10%;
                                     }
-                                    .correct, .false {
-                                        line-height: 50px;
-                                        font-size: 28px;
+                                    .correct,.false{
+                                        font-size: 100%;
+                                        line-height: 35px;
+                                    }
                                      }
-                                    }
+                                @media (min-width: 1366px){
+                                    .wrapper {
+                                        width: 50%;
+                                        height: 41%;
+                                        margin-left: 23%;
+                                        margin-top: -52%;
+                                        }
+                                        #quiz > h1 {
+                                            font-size: 31px;
+                                            padding-top: 5px;
+                                        }
+                                        .questions {
+                                            font-size: 21px;
+                                            padding: 8px;
+                                         }
+                                         .answers div {
+                                            font-size: 18px;
+                                            padding: 6px;
+                                        }
+                                        .answers{
+                                            margin-top: -3%;
+                                        }
+                                        h3{
+                                            font-size: 21px;
+                                            margin-top: 10%;
+                                        }
+                                        .correct,.false{
+                                            font-size: 100%;
+                                            line-height: 35px;
+                                        }
+                                         }
 
                                     @media (min-width: 1540px){
                                         .wrapper {
-                                            margin-top: -50%;
                                         width: 50%;
                                         height: 60%;
                                         margin-left: 23%;
@@ -369,7 +403,6 @@ body, html {
                                         }
                                         @media (min-width: 1920px){
                                             .wrapper {
-                                                margin-top: -50%;
                                             width: 50%;
                                             height: 60%;
                                             margin-left: 23%;
